deployment/k8s/3-deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: hugo
  namespace: hugo
spec:
  replicas: 3
  template:
    metadata:
      labels:
        app: hugo
    spec:
      containers:
      - name: website
        image: DOCKERHUBUSER/hugo-blog:0.0.1
        imagePullPolicy: Always
        ports:
        - containerPort: 80
