deployment/k8s/4-service.yml
kind: Service
apiVersion: v1
metadata:
  name: hugo
  namespace: hugo
spec:
  selector:
    app: hugo
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: LoadBalancer
